# ffmpegthumbnailer

./: .clang-format  .clanginfo  .cproject  .gitignore  .travis.yml  BuildingFromSubversion.md  CMakeLists.txt  CMakeUninstall.cmake.in  ChangeLog  FFMpegThumbnailer.md  Faq.md  INSTALL  MakeRelease.sh  Makefile.am  ProjectHome.md  Projects.md  README.md  autogen.sh  config.h.in  configure.ac  flake.nix  justfile  libffmpegthumbnailer.pc.in  main.cpp
.github/workflows/: build.yml  release.yml
cmake/: FindFFmpeg.cmake
gfx/: filmhole.xcf
kffmpegthumbnailer/: .gitignore  CMakeLists.txt  Changelog  kffmpegthumbnailer.cpp  kffmpegthumbnailer.desktop  kffmpegthumbnailer.h  kffmpegthumbnailersettings5.kcfg  kffmpegthumbnailersettings5.kcfgc
libffmpegthumbnailer/: ffmpegthumbnailertypes.h  filmstrip.h  filmstripfilter.cpp  filmstripfilter.h  grayscalefilter.h  histogram.h  histogramutils.h  ifilter.h  imagetypes.h  imagewriter.h  imagewriterfactory.h  jpegwriter.cpp  jpegwriter.h  moviedecoder.cpp  moviedecoder.h  pngwriter.cpp  pngwriter.h  rgbwriter.cpp  rgbwriter.h  stringoperations.cpp  stringoperations.h  videoframe.h  videothumbnailer.cpp  videothumbnailer.h  videothumbnailerc.cpp  videothumbnailerc.h
man/: ffmpegthumbnailer.1
src/: Makefile.am  main.c  main.cpp  moviedecoder.cpp  pngwriter.h  stringoperations.cpp  videothumbnailer.cpp  videothumbnailer.h
src/ffmpegthumbnailer/: Makefile.am  pngwriter.cpp
src/libffmpegthumbnailer/: Makefile.am  filmstripfilter.h  imagewriter.h  imagewriterfactory.hpp  jpegwriter.cpp  jpegwriter.h  jpegwriter.hpp  moviedecoder.cpp  moviedecoder.h  moviedecoder.hpp  pngwriter.cpp  pngwriter.hpp  stringoperations.h  videoframe.h  videothumbnailer.cpp  videothumbnailer.h  videothumbnailer.hpp  videothumbnailerc.cpp  videothumbnailerc.h
tags/1.2.0/: AUTHORS  Makefile  libffmpegthumbnailer.pc.in
tags/2.0.9/: Makefile.am
tags/2.0.9/kffmpegthumbnailer/: README  kffmpegthumbnailer.desktop
tags/2.0.9/unittest/: histogramtest.cpp
tags/ffmpegthumbnailer-1.0/: ChangeLog  configure.ac
tags/ffmpegthumbnailer-1.0/src/: moviedecoder.cpp  pngwriter.h  videothumbnailer.cpp
tags/ffmpegthumbnailer-1.0/thunar files/: video-thumbnailer.desktop
tags/ffmpegthumbnailer-1.1.1/: ChangeLog  configure.ac
tags/ffmpegthumbnailer-1.1.2/: ChangeLog  Makefile.am
tags/ffmpegthumbnailer-1.1.2/src/: moviedecoder.cpp  pngwriter.cpp  stringoperations.h  videothumbnailer.cpp  videothumbnailer.h
tags/ffmpegthumbnailer-1.1.3/src/: Makefile.am  exception.h
tags/ffmpegthumbnailer-1.1.5/: autogen.sh  configure.ac
tags/ffmpegthumbnailer-1.1.5/src/: Makefile.am  main.cpp  moviedecoder.cpp  pngwriter.h  videothumbnailer.cpp
tags/ffmpegthumbnailer-1.2.0/: configure.ac
tags/ffmpegthumbnailer-1.2.0/src/: Makefile.am  main.c
tags/ffmpegthumbnailer-1.2.0/src/libffmpegthumbnailer/: moviedecoder.cpp  pngwriter.h
tags/ffmpegthumbnailer-1.2.1/: ChangeLog
tags/ffmpegthumbnailer-1.2.2/: Makefile.am  configure.ac
tags/ffmpegthumbnailer-1.2.2/src/: main.c
tags/ffmpegthumbnailer-1.2.3/: ChangeLog
tags/ffmpegthumbnailer-1.2.5/: TODO  configure.ac
tags/ffmpegthumbnailer-1.2.5/src/: main.cpp
tags/ffmpegthumbnailer-1.2.6/: configure.ac
tags/ffmpegthumbnailer-1.3.0/: Makefile.am  configure.ac
tags/ffmpegthumbnailer-1.4.0/src/: main.cpp
tags/ffmpegthumbnailer-1.5.0/libffmpegthumbnailer/: moviedecoder.h
tags/ffmpegthumbnailer-1.5.1/: Makefile.am
tags/ffmpegthumbnailer-1.5.1/libffmpegthumbnailer/: imagetypes.h  imagewriter.h  moviedecoder.cpp
tags/ffmpegthumbnailer-1.5.2/: ChangeLog  MakeRelease.sh  Makefile.am  configure.ac
tags/ffmpegthumbnailer-1.5.2/libffmpegthumbnailer/: videothumbnailerc.cpp
tags/ffmpegthumbnailer-1.5.3/: ChangeLog
tags/ffmpegthumbnailer-1.5.3/libffmpegthumbnailer/: histogram.h  (+4 more)
tags/ffmpegthumbnailer-1.5.5/: configure.ac
tags/ffmpegthumbnailer-1.5.6/: ChangeLog  README
tags/ffmpegthumbnailer-2.0.0/: Makefile.am  configure.ac
tags/ffmpegthumbnailer-2.0.1/: ChangeLog
tags/ffmpegthumbnailer-2.0.2/: configure.ac  main.c
tags/ffmpegthumbnailer-2.0.3/: ChangeLog  configure.ac
tags/ffmpegthumbnailer-2.0.4/: ChangeLog  MakeRelease.sh  Makefile.am  configure.ac  main.cpp
tags/ffmpegthumbnailer-2.0.5/: Makefile.am  configure.ac
tags/ffmpegthumbnailer-2.0.6/: configure.ac
tags/ffmpegthumbnailer-2.0.7/: ChangeLog  configure.ac  main.cpp
tags/ffmpegthumbnailer-2.0.8/: MakeRelease.sh
tags/ffmpegthumbnailer-2.0.9/: .project  MakeRelease.sh  configure.ac  main.cpp
tags/lastfmlib-0.1.4/: configure.ac  main.c
test/: CMakeLists.txt  histogramtest.cpp  testrunner.c  testrunner.cpp  videothumbnailerctest.cpp  videothumbnailertest.cpp
test/testframework/: catch.hpp
thunar files/: ffmpegthumbnailer.desktop
trunk/: .cproject  ChangeLog  MakeRelease.sh  Makefile.am  autogen.sh  configure.ac  libffmpegthumbnailer.pc.in  main.c  main.cpp  video-thumbnailer.desktop
trunk/ffmpegthumbnailer/: main.cpp
trunk/kffmpegthumbnailer/: CMakeLists.txt  Changelog  INSTALL  kffmpegthumbnailer.cpp  kffmpegthumbnailer.desktop
trunk/libffmpegthumbnailer/: Makefile.am  filmstripfilter.cpp  grayscalefilter.h  ifilter.h  imagetypes.h  jpegwriter.cpp  jpegwriter.h  moviedecoder.cpp  moviedecoder.h  stringoperations.cpp  tags  videoframe.h  videothumbnailer.cpp  videothumbnailer.h  videothumbnailerc.cpp  videothumbnailerc.h
trunk/man/: ffmpegthumbnailer.1
trunk/src/: Makefile.am  Makefile.in  main.c  main.cpp  moviedecoder.cpp  moviedecoder.h  pngwriter.cpp  videothumbnailer.cpp  videothumbnailer.h
trunk/src/libffmpegthumbnailer/: Makefile.am  jpegwriter.cpp  moviedecoder.cpp  moviedecoder.h  pngwriter.cpp  stringoperations.cpp  videothumbnailer.cpp  videothumbnailer.h  videothumbnailer.hpp  videothumbnailerc.cpp  videothumbnailerc.h
trunk/thunar files/: ffmpegthumbnailer.desktop
trunk/unittest/: histogramtest.cpp  testrunner.cpp  videothumbnailertest.cpp
unittest/: histogramtest.cpp  testrunner.cpp  videothumbnailertest.cpp
wiki/: BuildingFromSubversion.wiki  FFMpegThumbnailer.wiki  Faq.wiki  Projects.wiki
(+66 files in other folders)
