lib_LTLIBRARIES = libffmpegthumbnailer.la

libffmpegthumbnailer_la_SOURCES =   moviedecoder.hpp moviedecoder.cpp \
                                    imagewriter.hpp imagewriterfactory.hpp\
                                    pngwriter.hpp pngwriter.cpp \
                                    jpegwriter.hpp jpegwriter.cpp \
                                    stringoperations.hpp stringoperations.cpp \
                                    videothumbnailer.cpp videothumbnailerc.cpp

libffmpegthumbnailer_include_HEADERS    = videothumbnailer.hpp videothumbnailerc.h

libffmpegthumbnailer_includedir         = $(includedir)/libffmpegthumbnailer
libffmpegthumbnailer_la_LDFLAGS         = -version-info 1:0:0
